@@ -4,6 +4,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.TextStyle;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -19,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import com.late.donot.api.dto.BaseDateTime;
 import com.late.donot.api.dto.Weather;
 import com.late.donot.api.dto.WeatherApi;
@@ -27,7 +29,6 @@ import com.late.donot.api.dto.WeatherHourApi;
 import com.late.donot.api.dto.WeekWeather;
 import com.late.donot.weather.client.WeatherClient;
 import com.late.donot.weather.client.WeekWeatherClient;
-import com.late.donot.weather.model.mapper.WeatherMapper;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -35,9 +36,6 @@ import lombok.extern.slf4j.Slf4j;
 @Transactional(rollbackFor = Exception.class)
 @Slf4j
 public class WeatherServiceImpl implements WeatherService{
-
-	@Autowired
-	private WeatherMapper mapper;
 	
 	@Autowired
 	private WeatherClient weatherClient;
@@ -259,14 +257,12 @@ public class WeatherServiceImpl implements WeatherService{
 		
 		LocalDateTime hourBase = now.withMinute(0).withSecond(0).withNano(0);
 		
-		List<WeatherHourApi> filtered =
-	            items.stream()
-	                 .filter(item -> {
+		List<WeatherHourApi> filtered = items.stream().filter(item -> {
 	                     LocalDateTime fcstDateTime = LocalDateTime.parse(
 	                             						item.getFcstDate() + item.getFcstTime(),
 	                             						DateTimeFormatter.ofPattern("yyyyMMddHHmm"));
 	                     return !fcstDateTime.isBefore(hourBase)
-	                         && fcstDateTime.isBefore(hourBase.plusHours(8));
+	                         && fcstDateTime.isBefore(hourBase.plusHours(10));
 	                 })
 	                 .collect(Collectors.toList());
 
@@ -416,19 +412,20 @@ public class WeatherServiceImpl implements WeatherService{
 	        buildWeekFromShortForecast(nx, ny);
 
 	    String tmFc = getMidTmFc();
-	    String regId = resolveRegId(lat, lon);
+	    String landRegId = resolveLandRegId(lat, lon);
+	    String taRegId   = resolveTaRegId(lat, lon);
 
-	    String landJson = callMidLandFcst(regId, tmFc);
-	    String taJson   = callMidTa(regId, tmFc);
+	    String landJson = callMidLandFcst(landRegId, tmFc);
+	    String taJson   = callMidTa(taRegId, tmFc);
 
 	    List<WeekWeather> midList =
-	        mergeWeekWeather(landJson, taJson)
-	            .stream()
-	            .limit(5)
-	            .toList();
+	        mergeWeekWeather(landJson, taJson);
 
-	    shortList.addAll(midList);
-	    return shortList;
+	    List<WeekWeather> result = new ArrayList<>();
+	    result.addAll(shortList);
+	    result.addAll(midList);
+
+	    return result;
 	}
 	
 	/** 작성자 : 이승준
@@ -456,7 +453,7 @@ public class WeatherServiceImpl implements WeatherService{
 	 *  작성일 : 2026-01-26
 	 *  지역코드 구분
 	 */
-	private String resolveRegId(double lat, double lon) {
+	private String resolveLandRegId(double lat, double lon) {
 
 	    if (lat >= 37.0 && lat <= 38.5 && lon >= 126.0 && lon <= 128.0) {
 	        return "11B00000";
@@ -483,6 +480,47 @@ public class WeatherServiceImpl implements WeatherService{
 	    }
 
 	    return "11B00000";
+	}
+	
+	/** 작성자 : 이승준
+	 *  작성일 : 2026-01-26
+	 *  기온예보 전용 지역코드
+	 */
+	private String resolveTaRegId(double lat, double lon) {
+
+	    if (lat >= 37.4 && lat <= 37.7 && lon >= 126.8 && lon <= 127.2) {
+	        return "11B10101";
+	    }
+
+	    if (lat >= 37.3 && lon < 126.8) {
+	        return "11B20201";
+	    }
+
+	    if (lat >= 37.0 && lat < 37.4) {
+	        return "11B20601";
+	    }
+
+	    if (lat >= 37.0 && lon >= 128.0) {
+	        return "11D10301";
+	    }
+
+	    if (lat >= 36.0 && lat < 37.0) {
+	        return "11C20401";
+	    }
+
+	    if (lat >= 34.5 && lat < 36.0) {
+	        return "11F20501";
+	    }
+
+	    if (lat >= 35.0 && lon >= 128.0) {
+	        return "11H20201";
+	    }
+
+	    if (lat < 34.5) {
+	        return "11G00201";
+	    }
+
+	    return "11B10101";
 	}
 	
 	/** 작성자 : 이승준
@@ -518,75 +556,61 @@ public class WeatherServiceImpl implements WeatherService{
 	 *  실제 계산로직
 	 */
 	private List<WeekWeather> mergeWeekWeather(String landJson, String taJson) {
-	    ObjectMapper mapper = new ObjectMapper();
+
+	    ObjectMapper jsonMapper = new ObjectMapper();
+	    XmlMapper xmlMapper = new XmlMapper();
 
 	    Map<Integer, WeekWeather.WeekWeatherBuilder> map = new HashMap<>();
 
 	    try {
-	        JsonNode landItems = mapper.readTree(landJson)
-	            .path("response")
-	            .path("body")
-	            .path("items")
-	            .path("item")
-	            .get(0);
+	        // ---------- 육상예보 ----------
+	        JsonNode landItems = landJson.trim().startsWith("<")
+	            ? xmlMapper.readTree(landJson).path("body").path("items").path("item")
+	            : jsonMapper.readTree(landJson).path("response").path("body").path("items").path("item");
 
-	        for (int day = 3; day <= 10; day++) {
+	        if (landItems.isArray()) landItems = landItems.get(0);
 
+	        for (int day = 4; day <= 10; day++) {
 	            WeekWeather.WeekWeatherBuilder builder =
 	                map.computeIfAbsent(day, d -> WeekWeather.builder());
 
-	            String wf;
-	            int rn;
+	            String wf = (day <= 7)
+	                ? landItems.path("wf" + day + "Am").asText()
+	                : landItems.path("wf" + day).asText();
 
-	            if (day == 3 || day == 4) {
-	                wf = landItems.path("wf" + day + "Pm").asText();
-	                rn = landItems.path("rnSt" + day + "Pm").asInt();
-	            } else {
-	                wf = landItems.path("wf" + day).asText();
-	                rn = landItems.path("rnSt" + day).asInt();
-	            }
+	            int rn = (day <= 7)
+	                ? landItems.path("rnSt" + day + "Am").asInt()
+	                : landItems.path("rnSt" + day).asInt();
 
-	            builder.condition(wf)
-	                   .rainProb(rn);
-	            log.info("DAY {} wf={}, rn={}", day, wf, rn);
-	        
+	            builder.condition(wf).rainProb(rn);
 	        }
 
-	        JsonNode taItems = mapper.readTree(taJson)
-	            .path("response")
-	            .path("body")
-	            .path("items")
-	            .path("item")
-	            .get(0);
+	        // ---------- 기온예보 ----------
+	        JsonNode taItems = taJson.trim().startsWith("<")
+	            ? xmlMapper.readTree(taJson).path("body").path("items").path("item")
+	            : jsonMapper.readTree(taJson).path("response").path("body").path("items").path("item");
 
-	        for (int day = 3; day <= 10; day++) {
+	        if (taItems.isArray()) taItems = taItems.get(0);
+
+	        for (int day = 4; day <= 10; day++) {
 	            WeekWeather.WeekWeatherBuilder builder = map.get(day);
+	            if (builder == null) continue;
 
-	            int min = taItems.path("taMin" + day).asInt();
-	            int max = taItems.path("taMax" + day).asInt();
-
-	            builder.minTemp(min)
-	                   .maxTemp(max);
+	            builder.minTemp(taItems.path("taMin" + day).asInt())
+	                   .maxTemp(taItems.path("taMax" + day).asInt());
 	        }
 
 	        return map.entrySet().stream()
-	        	    .sorted(Map.Entry.comparingByKey())
-	        	    .map(e -> {
-	        	        int day = e.getKey(); // 3 ~ 10
-	        	        WeekWeather.WeekWeatherBuilder b = e.getValue();
-
-	        	        String condition = b.build().getCondition();
-
-	        	        return b
-	        	            .dayLabel(resolveDayLabelFromToday(day))
-	        	            .icon(resolveWeekIcon(condition))
-	        	            .build();
-	        	    })
-	        	    .toList();
+	            .sorted(Map.Entry.comparingByKey())
+	            .map(e -> e.getValue()
+	                .dayLabel(resolveDayLabelFromToday(e.getKey()))
+	                .icon(resolveWeekIcon(e.getValue().build().getCondition()))
+	                .build())
+	            .collect(Collectors.toList());
 
 	    } catch (Exception e) {
 	        log.error("주간 날씨 병합 실패", e);
-	        throw new RuntimeException("주간 날씨 처리 실패");
+	        return List.of();
 	    }
 	}
 	
@@ -624,37 +648,27 @@ public class WeatherServiceImpl implements WeatherService{
 	private List<WeekWeather> buildWeekFromShortForecast(int nx, int ny) {
 
 	    BaseDateTime base = getVilageBaseDateTime();
-
 	    String response = weatherClient.getVilageFcst(
-	        serviceKey,
-	        1,
-	        1000,
-	        "JSON",
-	        base.getBaseDate(),
-	        base.getBaseTime(),
-	        nx,
-	        ny
+	        serviceKey, 1, 1000, "JSON",
+	        base.getBaseDate(), base.getBaseTime(), nx, ny
 	    );
 
 	    List<WeatherHourApi> items = parseVilageItems(response);
 	    if (items.isEmpty()) return List.of();
 
-	    Map<LocalDate, List<WeatherHourApi>> dayMap =
-	        items.stream()
-	            .collect(Collectors.groupingBy(item ->
-	                LocalDate.parse(
-	                    item.getFcstDate(),
-	                    DateTimeFormatter.ofPattern("yyyyMMdd")
-	                )
-	            ));
-
 	    LocalDate today = LocalDate.now();
+
+	    Map<LocalDate, List<WeatherHourApi>> dayMap =
+	        items.stream().collect(Collectors.groupingBy(item ->
+	            LocalDate.parse(item.getFcstDate(),
+	                DateTimeFormatter.ofPattern("yyyyMMdd"))
+	        ));
 
 	    return dayMap.entrySet().stream()
 	        .filter(e -> {
 	            long diff = java.time.temporal.ChronoUnit.DAYS
 	                .between(today, e.getKey());
-	            return diff >= 0 && diff <= 2;
+	            return diff >= 0 && diff <= 3; // ✅ 3일까지
 	        })
 	        .sorted(Map.Entry.comparingByKey())
 	        .map(e -> buildOneDayFromHours(today, e.getKey(), e.getValue()))
